@@ -12,6 +12,7 @@
         { 'sla'                          => [ 'SLA %',                      'int',             '98'                  ,'', 1    ] },
         { 'graph_min_sla'                => [ 'Graph SLA %',                'int',             '90'                  ,'', 1    ] },
         { 'decimals'                     => [ 'Decimal Points',             'int',             '2'                   ,'', 1    ] },
+        { 'hostnameformat'               => [ 'Hostname Format',            'hostformat', 'hostname'                           ] },
         { 'dateformat'                   => [ 'Dateformat',                 'dateformat', ''                                   ] },
         { 'datetimeformat'               => [ 'Datetimeformat',             'datetimeformat', ''                               ] },
         { 'assumeinitialstates'          => [ 'Assume Initial States',      'yes_no',          'yes'                           ] },
@@ -63,7 +64,7 @@
        IF param.exists('mail_max_level') && param.mail_max_level != -1 && p < param.mail_max_level; param.mail_max_level_count = param.mail_max_level_count + 1; END;
        IF param.details_max_level != -1 && p >= param.details_max_level; NEXT;
       END %]
-    [% pagetitle = loc("Host: %s", hst) %]
+    [% pagetitle = loc("Host: %s", _hst(hst)) %]
     [% WRAPPER 'reports/comp/page_standard.tt' %]
       [% PROCESS 'reports/comp/sla_graph_page.tt' %]
     [% END %]
